gccida/g1/expand_tree_builtin
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3545:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v3; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3546:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3623:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3623:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 11); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3630:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3630:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 11); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3637:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3637:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 11); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3644:19: error: expected expression
v4 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3644:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)*( &global_trees + 11); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3671:19: error: expected expression
v4 = ( tree_node *)global_trees; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3671:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)global_trees; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3683:19: error: expected expression
v4 = ( tree_node *)global_trees; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/c-common.c:3683:8: error: use of undeclared identifier 'tree_node'
v4 = ( tree_node *)global_trees; 
       ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_tree_builtin/src/obj/c-common.o] Error 1
